--- a/index.html
+++ b/index.html
@@ -112,7 +112,8 @@
                                                     </p>
 
                                                     <div class="home-buttons">
-                                                        <a href="https://www.google.com" target="_blank" class="btn btn-primary">Download
+                                                        <a href="https://www.google.com" target="_blank"
+                                                            class="btn btn-primary">Download
                                                             CV</a>
                                                         <a href="#" target="_self" class="btn btn-secondary">Contact</a>
                                                     </div>
@@ -144,11 +145,14 @@
                                             </div>
 
                                             <div class="ci-text">
-                                                <h4>Copywrite</h4>
-                                                <p>Mauris neque libero, aliquet vel mollis nec, euismod sed tellus.
-                                                    Mauris convallis dictum elit id volutpat. Vivamus blandit, dolor
-                                                    vitae lacinia maximus, risus velit vehicula odio, a tincidunt turpis
-                                                    turpis tempus ex.</p>
+                                                <h4>Desarrollador Android en Ecosistemas SRL</h4>
+                                                <p>(Marzo 2022 - Actualidad)</p>
+                                                <p>Cliente asignado:
+                                                    Prosegur.
+                                                    Mi responsabilidad principal es mantener y mejorar la aplicación de
+                                                    uso interno, brindar soporte técnico y corregir errores. También me
+                                                    encargo de desarrollar nuevas funcionalidades que satisfagan las
+                                                    necesidades del negocio.</p>
                                             </div>
                                         </div>
 
@@ -158,7 +162,8 @@
                                             </div>
 
                                             <div class="ci-text">
-                                                <h4>Web Design</h4>
+                                                <h4>Desarrollador Android en Vippinn</h4>
+                                                <p>(Marzo 2021 - Junio 2021)</p>
                                                 <p>Mauris neque libero, aliquet vel mollis nec, euismod sed tellus.
                                                     Mauris convallis dictum elit id volutpat. Vivamus blandit, dolor
                                                     vitae lacinia maximus, risus velit vehicula odio, a tincidunt turpis
@@ -177,7 +182,8 @@
                                             </div>
 
                                             <div class="ci-text">
-                                                <h4>Ecommerce</h4>
+                                                <h4>Visual link IT Australia</h4>
+                                                <p>(Enero 2022 - Abril 2022)</p>
                                                 <p>Mauris neque libero, aliquet vel mollis nec, euismod sed tellus.
                                                     Mauris convallis dictum elit id volutpat. Vivamus blandit, dolor
                                                     vitae lacinia maximus, risus velit vehicula odio, a tincidunt turpis
